--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <head>
+        <script src="https://cdn.jsdelivr.net/npm/pace-js@latest/pace.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pace-js@latest/pace-theme-default.min.css">
+    </head>
+
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Project</title>
 </head>
 
 <body>
-    start
+    <h1 class="title">LOGOTYPE</h1>
 
+    <div id="preloader">
+        <div class="p">LOADING</div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="./assets/js/jquery.bez.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
